objects/ESC_MiestoneClosureFields__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Field_1__c</fullName>
        <label>Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_2__c</fullName>
        <label>Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_3__c</fullName>
        <label>Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MilestoneClosureFields</label>
</CustomObject>